k8s/apps/homepage/stonegarden/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: macnichol
  labels:
    dev.macnichol.app: homepage
