k8s/apps/homepage/stonegarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macnichol
  namespace: macnichol
  labels:
    app: macnichol
spec:
  replicas: 2
  selector:
    matchLabels:
      app: macnichol
  template:
    metadata:
      namespace: macnichol
      labels:
        app: macnichol
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: macnichol
          image: registry.gitlab.com/vehagn/macnichol
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - name: web
              containerPort: 3000
