k8s/apps/homepage/stonegarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: macnichol
  namespace: macnichol
spec:
  type: ClusterIP
  selector:
    app: macnichol
  ports:
    - name: web
      port: 3000
